# campfire

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE-multi-agent-orchestrator.md  CHANGELOG.md  CI_UI_IMPLEMENTATION.md  CLAUDE.md  COLLECTIVE_INTELLIGENCE_ARCHITECTURE.md  COLLECTIVE_INTELLIGENCE_RESEARCH.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  TESTING_GUIDE_UI.md  TEST_RESULTS.md  TODO-multi-agent-orchestrator.md  TODO.md  docker-compose.yml  package.json  release-please-config.json  sonar-project.properties
.github/workflows/: ci.yml  publish.yml
.husky/: pre-commit
desktop/: README.md  electron-builder.yml  package.json  preload.cjs
desktop/main/: index.js  menu.js  net-utils.js  server-manager.js
desktop/scripts/: after-pack.js  stage.sh
desktop/test/: net-utils.test.js
docs/design/: semantic-memory-v2.md
docs/integrations/: metaharness.md
landing/: index.html  package.json
landing/src/: App.tsx  index.css  main.tsx
scripts/: audit-recordings.ts  dev-start.sh  landing-start.sh  sync-codex-protocol.sh
tui/: Cargo.toml  README.md
tui/src/: api.rs  app.rs  events.rs  main.rs  protocol.rs  ws.rs
tui/src/ui/: chat.rs  composer.rs  mod.rs  permission.rs  session_list.rs
web/: .gitignore  CHANGELOG.md  CODEX_MAPPING.md  dev.ts  index.html  package.json  tsconfig.json  vite.config.ts
web/public/: manifest.json  sw.js
web/server/: ADAPTERS.md  adapter-registry-types.ts  adapter-registry.test.ts  adapter-registry.ts  adapter-types.test.ts  adapter-types.ts  agent-executor.ts  agent-mcp-bridge.test.ts  auth.test.ts  (+136 more)
(+172 files in other folders)
