[package]
name = "campfire-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for Campfire — connect to a running Campfire server from your terminal"
license = "MIT"

[[bin]]
name = "campfire-tui"
path = "src/main.rs"

[dependencies]
ratatui           = "0.28"
crossterm         = "0.28"
tokio             = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest           = { version = "0.12", features = ["json"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
clap              = { version = "4", features = ["derive"] }
uuid              = { version = "1", features = ["v4"] }
futures-util      = "0.3"
anyhow            = "1"
